Fixes wrapping of home page on smaller screens

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,6 @@
-html, body {
+html, body, #root {
     background-color: whitesmoke;
+    height: 100%;
 }
 
 @keyframes spin {
