--- a/front-end/src/components/AdminComponents/HotelManager.css
+++ b/front-end/src/components/AdminComponents/HotelManager.css
@@ -7,6 +7,7 @@
 .HotelManager__header {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 .HotelManager__header-end {
     margin-left: auto;
